data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2100.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\01\7f\60\00\00\02\93\80\80\80\00\01\03\65\6e"
    "\76\0b\61\6c\74\65\72\5f\73\74\61\63\6b\00\00\03"
    "\82\80\80\80\00\01\01\0a\93\80\80\80\00\01\8d\80"
    "\80\80\00\00\41\01\04\7f\10\00\05\41\00\0b\1a\0b"
  )
""
)